--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,14 @@ gitpython = "^3.1.43"
 networkx = "^3.3"
 matplotlib = "^3.9.0"
 numpy = "^1.26.4"
+scipy = "^1.13.0"
+pygraphviz = "^1.13"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+# Allow lines to be as long as 120.
+line-length = 80
